--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="robots" content="all" />
-    <link rel="shortcut icon" type="image/x-icon" href="./img/icon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="img/icon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Amir Ageez | Personal Website</title>
     <meta name="description" content="Amir Ageez's Personal Website. Amir is a Big Data Geek aiming at achieving an amazing career in big data and spreading its knowledge in the Arabic community.">
@@ -13,7 +13,7 @@
     <meta name="keywords" content="Amir,Ageez,Data Engineer,Hadoop Engineer,Hadoop Developer,Hadoop in Arabic,Data Architect,Freelancer,هادوب بالعربى">
     <!-- Favicons
         ================================================== -->
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/icon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
